[package]
name = "IronHack_ProyectoFinal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"

[[bin]]
name = "IronHack_ProyectoFinal"
path = "src/main.rs"



[profile.release]
opt-level = "z"
lto = true
codegen-units = 1